--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -213,6 +213,13 @@
 .section-5 {
   background-image: url("../images/section-5-BG.png");
   height: fit-content; }
+  @media (min-width: 600px) {
+    .section-5 {
+      height: 70vh;
+      align-items: center; } }
+
+.section-5-name {
+  margin: 20px 0 0 0; }
 
 .section-6-title {
   margin: 10px; }
