--- a/app/css/styles.scss
+++ b/app/css/styles.scss
@@ -262,7 +262,6 @@
 
 }
 
-
 .section-4-macbook {
   margin: 35px 0;
 
@@ -281,18 +280,27 @@
 }
 
 .section-4-paragraph {
-      max-width: 90%;
+  max-width: 90%;
 }
+
 
 .section-5 {
   background-image: url("../images/section-5-BG.png");
   height: fit-content;
 
   @media (min-width: 600px) {
-
-
+    height: 70vh;
+    align-items: center;
   }
 }
+
+.section-5-avatar {
+}
+
+.section-5-name {
+  margin: 20px 0 0 0;
+}
+
 
 .section-6-title {
   margin: 10px;
