--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -97,7 +97,10 @@
 }
 
 .section {
-  height: 100vh;
+  padding: 0 10px;
+  @media (min-width: 600px) {
+    padding: 0 50px;
+  }
 }
 
 .section-main {
@@ -109,7 +112,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-
+  height: 100vh;
 }
 
 .headline-main {
@@ -128,6 +131,19 @@
   margin: 40px;
 }
 
+.play-button-svg:hover > .fill-gray {
+  fill: #5d5d5d;
+  cursor: pointer;
+}
+
+.play-button-svg {
+  max-width: 50px;
+  max-height: 50px;
+}
+
+.fill-gray {
+  fill: gray;
+}
 
 .try-block-button {
   text-transform: uppercase;
@@ -139,7 +155,16 @@
   border: none;
 
   background-color: #ff6d6d;
-  padding: 12px 85px;
+  padding: 12px 45px;
+
+  @media (min-width: 600px) {
+    padding: 12px 85px;
+
+  }
+}
+
+.try-block-button:hover {
+  background-color: #ef6565;
 }
 
 .try-block-hint {
@@ -150,9 +175,16 @@
   font-size: 14pt;
 }
 
+.section-2-text {
+  margin: auto;
+  @media (min-width: 980px) {
+    max-width: 40vw;
+  }
+}
 
 .section-2 {
   position: relative;
+  min-height: 55vh;
 
   & .triangle {
     position: absolute;
@@ -164,7 +196,7 @@
     border-style: solid;
     border-width: 0 0 50vh 50vh;
     border-color: transparent transparent #fb8686 transparent;
-    @media (max-width: 600px) {
+    @media (max-width: 980px) {
       display: none;
     }
   }
@@ -187,7 +219,7 @@
   align-content: center;
 
 
-  @media (min-width: 600px) {
+  @media (min-width: 980px) {
     width: calc(100% - 500px);
     padding-left: 20px;
 
@@ -201,7 +233,6 @@
   color: rgb(40, 40, 40);
   line-height: 1.25;
   text-align: center;
-  height: 93px;
   @media (min-width: 600px) {
     text-align: left;
   }
@@ -213,6 +244,7 @@
   color: rgb(255, 109, 109);
   line-height: 3.125;
   text-align: center;
+  margin-bottom: -10px;
   @media (min-width: 600px) {
     text-align: left;
   }
@@ -247,11 +279,15 @@
   @media (min-width: 600px) {
     background-position: center;
     padding: 50px;
-    height: 500px;
     background-image: url("../img/section-3-BG.png");
     background-size: cover;
   }
 
+}
+
+.section-3-coffecup {
+  position: absolute;
+  right: 0;
 }
 
 .section-3-title {
@@ -269,10 +305,20 @@
   justify-content: space-evenly;
 }
 
+.section-3-icon {
+  margin-bottom: 10px;
+  @media (min-width: 600px) {
+    margin-bottom: 30px;
+  }
+}
+
 .feature-title {
   text-align: center;
-  margin-left: 20px;
-  margin-top: 35px;
+  margin: 20px 0 10px 0;
+
+  @media (min-width: 600px) {
+    margin: 35px 0 60px 0;
+  }
 }
 
 .feature-card {
@@ -286,35 +332,62 @@
 
 
 .section-4 {
-  background-image: url("../img/section-4-BG.png");
+  //background-image: url("../img/section-4-BG.png");
   background-repeat: no-repeat;
   background-position: -150px;
   height: unset;
+  position: relative;
 
   @media (min-width: 600px) {
     display: flex;
     flex-direction: row-reverse;
+    justify-content: space-between;
     height: 60vh;
     align-items: center;
 
   }
 
+  & .triangle {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    border-style: solid;
+    border-width: 0 60vh 60vh 0;
+    z-index: -1;
+    border-color: transparent transparent #fb8686 transparent;
+    @media (max-width: 760px) {
+      display: none;
+    }
+  }
+
 }
 
-.section-4-macbook {
-  margin: 35px 0;
 
-  @media (min-width: 600px) {
-    width: 80%;
+.section-4-macbook {
+  display: none;
+
+  @media (min-width: 760px) {
+    display: block;
+    width: 50%;
     max-width: 550px;
+    margin: 35px 0;
   }
 }
 
+.section-4-new-design {
+  margin: 40px 15px;
+  @media (min-width: 760px) {
+    width: 50%;
+  }
+
+}
+
 .section-4-title {
-  margin: 20px 0 0 20px;
   text-align: center;
   @media (min-width: 600px) {
-    max-width: 70%;
+    max-width: 80%;
     text-align: left;
   }
 }
@@ -344,14 +417,15 @@
 }
 
 .section-5-partners {
-  margin-bottom: 30px;
-  margin-top: 30px;
-  img{
-    margin: 10px;
-  }
-  @media (max-width: 600px) {
-    padding-left: 30px;
-    padding-right: 30px;
+  display: none;
+
+  @media (min-width: 600px) {
+    display: flex;
+
+    margin-bottom: 30px;
+    margin-top: 40px;
+    width: 100%;
+    justify-content: space-around;
   }
 }
 
@@ -374,7 +448,7 @@
   }
 }
 
-.section-6-trynow{
+.section-6-trynow {
   position: relative;
   width: 90%;
   margin: 50px 15px 15px;
@@ -384,21 +458,30 @@
   }
 }
 
-.section-6-tooltip{
+.section-6-tooltip {
   position: absolute;
   top: -50px;
   left: 25px;
   white-space: nowrap;
   color: rgba(#f6f5f3, 0.6);
-  img{
+
+  img {
     position: absolute;
     top: 0px;
     left: -25px;
   }
 }
 
+.section-6-new-design {
+  margin: 70px 0;
+  @media (min-width: 600px) {
+
+  }
+}
+
 .section-6-paragraph {
-  margin: 0 20px;
+  margin: 35px auto;
+  text-align: center;
   @media (min-width: 600px) {
     max-width: 70%;
     margin: auto;
@@ -410,10 +493,11 @@
 }
 
 .section-6-browser {
-  max-width: 70%;
-  margin: auto;
+  display: none;
   @media (min-width: 600px) {
-
+    display: flex;
+    max-width: 70%;
+    margin: auto;
   }
 }
 
@@ -449,12 +533,24 @@
 
 .section-7-terms {
   color: #b8b9c3;
-  font-size: 0.7em;
+  font-size: 14pt;
+  margin: 25px 0;
+}
+
+.section-7-terms-link {
+  color: inherit;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.section-7-terms-link:hover {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .transparent-background {
   background-color: #ffffff2b;
-
 }
 
 .signup-button {
@@ -466,12 +562,18 @@
   width: 100%;
 }
 
+.signup-button:hover {
+  background-color: #ef6565;
+}
+
+
 .footer {
   font-size: 14pt;
 }
 
 .footer {
   margin-left: 20px;
+
   &__description {
     width: 85%;
   }
@@ -486,6 +588,32 @@
 
   &__item {
     color: #282828;
+  }
+
+  &__item:hover {
+    text-decoration: none;
+
+  }
+
+  &__address {
+    color: inherit;
+  }
+
+  &__address:hover {
+    text-decoration: none;
+  }
+
+  &__tel {
+    color: inherit;
+  }
+
+  &__tel:hover {
+    text-decoration: none;
+  }
+
+  &__send-button:hover {
+    cursor: pointer;
+    filter: brightness(0.9);
   }
 }
 
