--- a/docs/scss/styles.css
+++ b/docs/scss/styles.css
@@ -148,7 +148,7 @@
   text-align: center;
   margin: 40px; }
 
-.play-button-svg:hover > .fill-gray {
+.play-button:hover > .fill-gray {
   fill: #5d5d5d;
   cursor: pointer; }
 
@@ -246,9 +246,12 @@
   font-size: 16px;
   font-family: ExoMedium, sans-serif;
   color: rgba(40, 40, 40, 0.659);
-  line-height: 1.625;
+  line-height: 26px;
   margin-top: 40px;
-  text-align: center; }
+  text-align: center;
+  letter-spacing: 1px;
+  color: #282828;
+  font-weight: 500; }
   @media (min-width: 600px) {
     .section-2-paragraph {
       text-align: left; } }
@@ -260,6 +263,7 @@
   width: 35%; }
 
 .section-3 {
+  position: relative;
   height: unset;
   background-color: #F6F5F3; }
   @media (min-width: 600px) {
@@ -355,6 +359,11 @@
       text-align: left; } }
 
 .section-4-paragraph {
+  font-size: 16px;
+  letter-spacing: 1px;
+  line-height: 26px;
+  color: #282828;
+  font-weight: 500;
   max-width: 90%; }
   @media (max-width: 600px) {
     .section-4-paragraph {
@@ -491,6 +500,13 @@
 
 .footer {
   margin-left: 20px; }
+  .footer__social {
+    display: none; }
+    @media (min-width: 600px) {
+      .footer__social {
+        display: flex;
+        width: 100%;
+        justify-content: space-around; } }
   .footer__description {
     width: 85%; }
   .footer__column {
