--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -254,9 +254,13 @@
   font-size: 16px;
   font-family: ExoMedium, sans-serif;
   color: rgba(40, 40, 40, 0.659);
-  line-height: 1.625;
+  line-height: 26px;
   margin-top: 40px;
   text-align: center;
+
+  letter-spacing: 1px;
+  color: #282828;
+  font-weight: 500;
   @media (min-width: 600px) {
     text-align: left;
   }
@@ -272,7 +276,7 @@
 
 
 .section-3 {
-
+  position: relative;
   height: unset;
   background-color: #F6F5F3;
 
@@ -393,7 +397,13 @@
 }
 
 .section-4-paragraph {
+  font-size: 16px;
+  letter-spacing: 1px;
+  line-height: 26px;
+  color: #282828;
+  font-weight: 500;
   max-width: 90%;
+
   @media (max-width: 600px) {
     text-align: center;
     max-width: none;
